@startuml

title __CONTROLLER's Class Diagram__\n

  namespace com.vale.warehouses.app.controller {
    class AdminUserController {
      {static} - logger : Logger
      + delete()
      + get()
      + list()
      + save()
      + update()
      - hideSensitiveData()
      - nullifyData()
      - throwExceptionIfNotAdminUser()
    }

    class com.vale.warehouses.app.controller.LeaseRequestController {
      {static} - logger : Logger
      + delete()
      + get()
      + list()
      + listNotCompeted()
      + listNotCompeted()
      - nullifyContractData()
      - throwExceptionIfAccessForbidden()
    }

    class LeasingContractController {
      {static} - logger : Logger
      + allForWarehouse()
      + delete()
      + endingSoonForOwner()
      + endingSoonForSaleAgent()
      + get()
      + list()
      + listCurrentlyLeasedForOwner()
      + listCurrentlyLeasedForSaleAgent()
      + listForOwner()
      + listForSaleAgent()
      + save()
      + update()
      - nullifyNestedObjects()
      - throwExceptionIfAccessForbidden()
    }

    class OwnerController {
      {static} - logger : Logger
      + delete()
      + get()
      + list()
      + update()
    }

    class RoleController {
      {static} - logger : Logger
      + list()
      - throwExceptionIfNotRole()
    }

    class SaleAgentController {
      {static} - logger : Logger
      + delete()
      + get()
      + list()
      + update()
    }

    class TenantController {
      {static} - logger : Logger
      + delete()
      + get()
      + list()
      + update()
    }

    class WarehouseController {
      {static} - logger : Logger
      + delete()
      + get()
      + list()
      + listAllForSaleAgent()
      + listForOwner()
      + listForSaleAgent()
      + save()
      + update()
      - throwExceptionIfAccessForbidden()
    }
  }


  com.vale.warehouses.app.controller.AdminUserController o-- com.vale.warehouses.app.service.interfaces.UserServiceInterface : userService
  com.vale.warehouses.app.controller.LeaseRequestController o-- com.vale.warehouses.app.service.interfaces.LeaseRequestInterface : service
  com.vale.warehouses.app.controller.LeasingContractController o-- com.vale.warehouses.app.service.interfaces.LeasingContractInterface : service
  com.vale.warehouses.app.controller.OwnerController o-- com.vale.warehouses.app.service.interfaces.OwnerInterface : service
  com.vale.warehouses.app.controller.RoleController o-- com.vale.warehouses.app.service.RoleService : roleService
  com.vale.warehouses.app.controller.SaleAgentController o-- com.vale.warehouses.app.service.interfaces.SaleAgentInterface : service
  com.vale.warehouses.app.controller.TenantController o-- com.vale.warehouses.app.service.interfaces.TenantInterface : service
  com.vale.warehouses.app.controller.WarehouseController o-- com.vale.warehouses.app.service.interfaces.LeasingContractInterface : leasingContractService
  com.vale.warehouses.app.controller.WarehouseController o-- com.vale.warehouses.app.service.interfaces.WarehouseInterface : service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
